fixed clumsy wrap of author on narrow displays

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -271,3 +271,7 @@
     }
   }
 }
+
+.nowrap {
+  white-space: nowrap;
+}
